Add Netlify identity widget.

--- a/public/low-tech/index.html
+++ b/public/low-tech/index.html
@@ -353,6 +353,8 @@
   onload="this.media='all'; this.onload=null;" />
 
 
+    
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </head>
 
   <body>
